[closes #600] Refactor FileSystem service